--- a/src/scss/components/pizza-block.scss
+++ b/src/scss/components/pizza-block.scss
@@ -8,6 +8,9 @@
   &:not(:nth-of-type(4n)) {
     margin-right: 3.7%;
   }
+  &:not(:nth-of-type(3n)) {
+    margin-right: 3.7%;
+  }
 
   &__image {
     width: 260px;
